// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerModal should be rendered correctly 1`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    className="uui-modal-window modal width-600 height-700 container"
  >
    <div
      className="root size-36 background-none padding-24 vPadding-12 border-bottom-gray40 spacing-12 modalHeader container align-items-center"
    >
      <div
        className="root font-sans-semibold text-color-gray80 line-height-24 font-size-18 v-padding-12 container"
      >
        Please select
      </div>
      <div
        className="flexSpacer"
      />
      <div
        className="flexCell"
        onClick={[Function]}
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "auto",
            "flexGrow": undefined,
            "flexShrink": 0,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <div
          className="root icon-color-gray60 uui-button-box uui-enabled -clickable"
          href={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="container uui-icon uui-enabled"
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#navigation-close-24.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flexCell subHeaderWrapper"
      onClick={[Function]}
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="root size-36 background-none vPadding-24 container align-items-center"
      >
        <div
          className="container uui-input-box -clickable root size-36"
          onBlur={[Function]}
          onFocus={[Function]}
          tabIndex={-1}
        >
          <div
            className="container uui-icon uui-enabled"
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#search-18.svg"
              />
            </svg>
          </div>
          <input
            autoFocus={true}
            className="uui-input"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Type text for quick search"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="root size-36 background-white body modal container align-items-center"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="wrapper root"
      >
        <div
          className="body"
          style={
            Object {
              "height": "auto",
              "maxHeight": 100500,
              "minHeight": 0,
              "overflow": "hidden",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="container1"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "bottom": undefined,
                "left": undefined,
                "marginBottom": 0,
                "marginRight": 0,
                "maxHeight": 100500,
                "minHeight": 0,
                "overflow": "scroll",
                "position": "relative",
                "right": undefined,
                "top": undefined,
              }
            }
          >
            <div
              className="container2"
              style={
                Object {
                  "height": null,
                }
              }
            >
              <div
                className="container3"
                style={
                  Object {
                    "top": 0,
                  }
                }
              >
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="renderItem"
                    >
                      <div
                        className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                      />
                      <div
                        className="flexSpacer"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "borderRadius": 3,
                "bottom": 2,
                "display": "none",
                "height": 6,
                "left": 2,
                "position": "absolute",
                "right": 2,
              }
            }
          >
            <div
              className="uui-thumb"
            />
          </div>
          <div
            style={
              Object {
                "borderRadius": 3,
                "bottom": 2,
                "display": "none",
                "position": "absolute",
                "right": 2,
                "top": 2,
                "width": 6,
              }
            }
          >
            <div
              className="uui-thumb"
            />
          </div>
        </div>
        <div
          className="uui-scroll-shadow-top"
        />
        <div
          className="uui-scroll-shadow-bottom"
        />
      </div>
    </div>
    <div
      className="root size-36 background-none padding-24 vPadding-24 spacing-12 modalFooter borderTop container align-items-center"
    >
      <div
        className="flexSpacer"
      />
      <div
        className="container uui-button-box uui-enabled -clickable button-color-gray50 root size-36 fill-white"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-caption"
        >
          Cancel
        </div>
      </div>
      <div
        className="container uui-button-box uui-enabled -clickable button-color-green root size-36 fill-solid"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-caption"
        >
          Select
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PickerModal should be rendered correctly 2`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    className="uui-modal-window modal width-600 height-700 container"
  >
    <div
      className="root size-36 background-none padding-24 vPadding-12 border-bottom-gray40 spacing-12 modalHeader container align-items-center"
    >
      <div
        className="root font-sans-semibold text-color-gray80 line-height-24 font-size-18 v-padding-12 container"
      >
        Please select
      </div>
      <div
        className="flexSpacer"
      />
      <div
        className="flexCell"
        onClick={[Function]}
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "auto",
            "flexGrow": undefined,
            "flexShrink": 0,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <div
          className="root icon-color-gray60 uui-button-box uui-enabled -clickable"
          href={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="container uui-icon uui-enabled"
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#navigation-close-24.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flexCell subHeaderWrapper"
      onClick={[Function]}
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": undefined,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="root size-36 background-none vPadding-24 container align-items-center"
      >
        <div
          className="container uui-input-box -clickable root size-36"
          onBlur={[Function]}
          onFocus={[Function]}
          tabIndex={-1}
        >
          <div
            className="container uui-icon uui-enabled"
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#search-18.svg"
              />
            </svg>
          </div>
          <input
            autoFocus={true}
            className="uui-input"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Type text for quick search"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="container root size-18 switch uui-disabled"
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-switch-body"
        >
          <div
            className="uui-switch-toggler"
          />
        </div>
        <div
          className="uui-input-label"
        >
          Show only selected
        </div>
      </div>
    </div>
    <div
      className="root size-36 background-white body modal container align-items-center"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="wrapper root"
      >
        <div
          className="body"
          style={
            Object {
              "height": "auto",
              "maxHeight": 100500,
              "minHeight": 0,
              "overflow": "hidden",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="container1"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "bottom": undefined,
                "left": undefined,
                "marginBottom": 0,
                "marginRight": 0,
                "maxHeight": 100500,
                "minHeight": 0,
                "overflow": "scroll",
                "position": "relative",
                "right": undefined,
                "top": undefined,
              }
            }
          >
            <div
              className="container2"
              style={
                Object {
                  "height": null,
                }
              }
            >
              <div
                className="container3"
                style={
                  Object {
                    "top": 0,
                  }
                }
              >
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          C2
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          C1+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          C1
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          B2+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          B2
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          B1+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          B1
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          A2+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          A2
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          A1+
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="pickerRow -clickable container -clickable align-items-center"
                  onClick={[Function]}
                >
                  <div
                    className="flexCell cell wrapper size-36 padding-24 padding-left-24"
                    onClick={[Function]}
                    style={
                      Object {
                        "alignSelf": undefined,
                        "flexBasis": "0",
                        "flexGrow": 1,
                        "flexShrink": undefined,
                        "minWidth": 0,
                        "textAlign": undefined,
                      }
                    }
                  >
                    <div
                      className="afterPaddings"
                    >
                      <div
                        className="container root size-18 checkbox-color-blue checkbox -clickable"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <div
                          className="uui-checkbox"
                        />
                      </div>
                    </div>
                    <div
                      className="wrappedContent"
                    >
                      <div
                        className="renderItem"
                      >
                        <div
                          className="root font-sans text-color-gray80 line-height-24 font-size-14 v-padding-6 container"
                        >
                          A1
                        </div>
                        <div
                          className="flexSpacer"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "borderRadius": 3,
                "bottom": 2,
                "display": "none",
                "height": 6,
                "left": 2,
                "position": "absolute",
                "right": 2,
              }
            }
          >
            <div
              className="uui-thumb"
            />
          </div>
          <div
            style={
              Object {
                "borderRadius": 3,
                "bottom": 2,
                "display": "none",
                "position": "absolute",
                "right": 2,
                "top": 2,
                "width": 6,
              }
            }
          >
            <div
              className="uui-thumb"
            />
          </div>
        </div>
        <div
          className="uui-scroll-shadow-top"
        />
        <div
          className="uui-scroll-shadow-bottom"
        />
      </div>
    </div>
    <div
      className="root size-36 background-none padding-24 vPadding-24 spacing-12 modalFooter borderTop container align-items-center"
    >
      <div
        className="container uui-button-box uui-enabled -clickable root size-36 linkButton-color-blue uui-no-left-icon uui-no-right-icon"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-caption"
        >
          SELECT ALL
        </div>
      </div>
      <div
        className="flexSpacer"
      />
      <div
        className="container uui-button-box uui-enabled -clickable button-color-gray50 root size-36 fill-white"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-caption"
        >
          Cancel
        </div>
      </div>
      <div
        className="container uui-button-box uui-enabled -clickable button-color-green root size-36 fill-solid"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-caption"
        >
          Select
        </div>
      </div>
    </div>
  </div>
</div>
`;
